@@ -106,7 +106,7 @@ if (!empty($_REQUEST['period']) || !empty($_REQUEST['stime'])) {
 		'stime' => get_request('stime')
 	));
 
-	$curl = new Curl($_SERVER['REQUEST_URI']);
+	$curl = new Curl();
 	$curl->removeArgument('period');
 	$curl->removeArgument('stime');
 
